[package]
name = "sieve-cache"
version = "0.1.1"
edition = "2021"
description = "SIEVE cache replacement policy"
homepage = "https://github.com/jedisct1/rust-sieve-cache"
keywords = ["cache", "replacement", "sieve"]
license = "MIT"
authors = ["Frank Denis <github@pureftpd.org>"]
categories = ["algorithms", "caching"]

[dev-dependencies]
criterion = "0.5"
rand = "0.8.5"
rand_distr = "0.4.3"

[[bench]]
name = "criterion"
harness = false

[profile.release]
panic = "abort"
opt-level = 3
