[package]
name = "sieve-cache"
version = "0.2.1"
edition = "2021"
description = "SIEVE cache replacement policy"
homepage = "https://github.com/jedisct1/rust-sieve-cache"
repository = "https://github.com/jedisct1/rust-sieve-cache"
keywords = ["cache", "replacement", "sieve"]
license = "MIT"
authors = ["Frank Denis <github@pureftpd.org>"]
categories = ["algorithms", "caching"]
readme = "README.md"

[dev-dependencies]
criterion = "0.5"
rand = "0.9.0"
rand_distr = "0.5.1"

[[bench]]
name = "criterion"
harness = false

[profile.release]
panic = "abort"
opt-level = 3
