[package]
name = "sieve-cache"
version = "1.1.5"
edition = "2021"
description = "SIEVE cache replacement policy with thread-safe wrappers"
homepage = "https://github.com/jedisct1/rust-sieve-cache"
repository = "https://github.com/jedisct1/rust-sieve-cache"
documentation = "https://docs.rs/sieve-cache"
keywords = ["cache", "replacement", "sieve", "thread-safe", "concurrent"]
license = "MIT"
authors = ["Frank Denis <github@pureftpd.org>"]
categories = ["algorithms", "caching", "concurrency", "data-structures"]
readme = "README.md"
rust-version = "1.60.0"

[features]
default = ["sync", "sharded"]
sync = []
sharded = []
doctest = ["sync", "sharded"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9.0"
rand_distr = "0.5.1"

[[bench]]
name = "criterion"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
debug = true
lto = "thin"
